src/kalos_lex.c
/* Generated by re2c 2.1.1 on Thu Jun  3 21:49:32 2021 */
#include <string.h>
#include <stdbool.h>
#include "kalos_lex.h"

enum yyc_state {
    yycinit,
    yycinstring,
    yycinstringmulti,
    yyccomment,
    yycstringformat,
};

#define KALOS_TOKEN(x) #x ,
const char* kalos_token_strings[] = {
    #include "kalos_constants.inc"
    "<invalid>",
};

enum string_state {
    STRING_STATE_NORMAL,
    STRING_STATE_EXPR,
    STRING_STATE_DONE,
};

void kalos_lex_init(const char kalos_far* s, kalos_lex_state* state) {
    state->s = s;
    state->line = 1;
    state->string_interp_state = STRING_STATE_NORMAL;
    state->string_interp_mode = yycinit;
}

kalos_token kalos_lex_peek(kalos_lex_state* state, char* output) {
    kalos_lex_state temp = *state;
    return kalos_lex(&temp, output);
}

kalos_token kalos_lex(kalos_lex_state* state, char* output) {
    enum yyc_state c = yycinit;
    if (state->string_interp_state == STRING_STATE_DONE) {
        c = state->string_interp_mode;
        state->string_interp_state = STRING_STATE_NORMAL;
    }
    const char kalos_far** s = &state->s;
    int* line = &state->line;
    *output = 0;

    const char kalos_far* word_start;
    const char kalos_far* word_end;
    const char kalos_far* ch;
    const char kalos_far* YYMARKER;

    const char kalos_far *yyt1; 
    for (;;) {
    
{
	char yych;
	switch (c) {
	case yycinit:
		goto yyc_init;
	case yycinstring:
		goto yyc_instring;
	case yycinstringmulti:
		goto yyc_instringmulti;
	case yycstringformat:
		goto yyc_stringformat;
	case yyccomment:
		goto yyc_comment;
	}
/* *********************************** */
yyc_init:
	yych = *(*s);
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\r':
	case ' ':	goto yy6;
	case '\n':	goto yy9;
	case '!':	goto yy11;
	case '"':	goto yy13;
	case '#':	goto yy15;
	case '%':	goto yy17;
	case '&':	goto yy19;
	case '(':	goto yy21;
	case ')':	goto yy23;
	case '*':	goto yy25;
	case '+':	goto yy27;
	case ',':	goto yy29;
	case '-':	goto yy31;
	case '.':	goto yy33;
	case '/':	goto yy35;
	case '0':
		yyt1 = (*s);
		goto yy37;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = (*s);
		goto yy39;
	case ':':	goto yy41;
	case ';':	goto yy43;
	case '<':	goto yy45;
	case '=':	goto yy47;
	case '>':	goto yy49;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'g':
	case 'j':
	case 'k':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = (*s);
		goto yy51;
	case '[':	goto yy54;
	case ']':	goto yy56;
	case '^':	goto yy58;
	case 'b':
		yyt1 = (*s);
		goto yy60;
	case 'c':
		yyt1 = (*s);
		goto yy61;
	case 'd':
		yyt1 = (*s);
		goto yy62;
	case 'e':
		yyt1 = (*s);
		goto yy63;
	case 'f':
		yyt1 = (*s);
		goto yy64;
	case 'h':
		yyt1 = (*s);
		goto yy65;
	case 'i':
		yyt1 = (*s);
		goto yy66;
	case 'l':
		yyt1 = (*s);
		goto yy67;
	case 't':
		yyt1 = (*s);
		goto yy68;
	case 'v':
		yyt1 = (*s);
		goto yy69;
	case '{':	goto yy70;
	case '|':	goto yy72;
	case '}':	goto yy74;
	case '~':	goto yy76;
	default:	goto yy4;
	}
yy2:
	++(*s);
	{ return KALOS_TOKEN_EOF; }
yy4:
	++(*s);
	{ return KALOS_TOKEN_ERROR; }
yy6:
	yych = *++(*s);
	switch (yych) {
	case '\t':
	case '\r':
	case ' ':	goto yy6;
	default:	goto yy8;
	}
yy8:
	{ continue; }
yy9:
	++(*s);
	{ if (state->string_interp_state != STRING_STATE_NORMAL) return KALOS_TOKEN_ERROR; (*line)++; continue; }
yy11:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy78;
	default:	goto yy12;
	}
yy12:
	{ return KALOS_TOKEN_BANG; }
yy13:
	yych = *(YYMARKER = ++(*s));
	switch (yych) {
	case '"':	goto yy80;
	default:	goto yy14;
	}
yy14:
	c = yycinstring;
	goto yyc_instring;
yy15:
	++(*s);
	c = yyccomment;
	goto yyc_comment;
yy17:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy82;
	default:	goto yy18;
	}
yy18:
	{ return KALOS_TOKEN_PERCENT; }
yy19:
	yych = *++(*s);
	switch (yych) {
	case '&':	goto yy84;
	case '=':	goto yy86;
	default:	goto yy20;
	}
yy20:
	{ return KALOS_TOKEN_BITAND; }
yy21:
	++(*s);
	{ return KALOS_TOKEN_PAREN_OPEN; }
yy23:
	++(*s);
	{ return KALOS_TOKEN_PAREN_CLOSE; }
yy25:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy88;
	default:	goto yy26;
	}
yy26:
	{ return KALOS_TOKEN_STAR; }
yy27:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy90;
	default:	goto yy28;
	}
yy28:
	{ return KALOS_TOKEN_PLUS; }
yy29:
	++(*s);
	{ return KALOS_TOKEN_COMMA; }
yy31:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy92;
	default:	goto yy32;
	}
yy32:
	{ return KALOS_TOKEN_MINUS; }
yy33:
	++(*s);
	{ return KALOS_TOKEN_PERIOD; }
yy35:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy94;
	default:	goto yy36;
	}
yy36:
	{ return KALOS_TOKEN_SLASH; }
yy37:
	++(*s);
yy38:
	word_start = yyt1;
	word_end = (*s);
	{ kalos_lex_strncpy(output, word_start, word_end - word_start); output[word_end - word_start] = 0; return KALOS_TOKEN_INTEGER; }
yy39:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy39;
	default:	goto yy38;
	}
yy41:
	++(*s);
	{
            if (state->string_interp_state == STRING_STATE_EXPR) {
                c = yycstringformat;
                continue;
            }
            return KALOS_TOKEN_COLON;
        }
yy43:
	++(*s);
	{ return KALOS_TOKEN_SEMI; }
yy45:
	yych = *++(*s);
	switch (yych) {
	case '<':	goto yy96;
	case '=':	goto yy98;
	default:	goto yy46;
	}
yy46:
	{ return KALOS_TOKEN_LT; }
yy47:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy100;
	default:	goto yy48;
	}
yy48:
	{ return KALOS_TOKEN_EQ; }
yy49:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy102;
	case '>':	goto yy104;
	default:	goto yy50;
	}
yy50:
	{ return KALOS_TOKEN_GT; }
yy51:
	yych = *++(*s);
yy52:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy53;
	}
yy53:
	word_start = yyt1;
	word_end = (*s);
	{ kalos_lex_strncpy(output, word_start, word_end - word_start); output[word_end - word_start] = 0; return KALOS_TOKEN_WORD; }
yy54:
	++(*s);
	{ return KALOS_TOKEN_SQBRA_OPEN; }
yy56:
	++(*s);
	{ return KALOS_TOKEN_SQBRA_CLOSE; }
yy58:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy106;
	default:	goto yy59;
	}
yy59:
	{ return KALOS_TOKEN_BITXOR; }
yy60:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy108;
	default:	goto yy52;
	}
yy61:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy109;
	default:	goto yy52;
	}
yy62:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy110;
	default:	goto yy52;
	}
yy63:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy111;
	default:	goto yy52;
	}
yy64:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy112;
	case 'o':	goto yy113;
	default:	goto yy52;
	}
yy65:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy114;
	default:	goto yy52;
	}
yy66:
	yych = *++(*s);
	switch (yych) {
	case 'f':	goto yy115;
	case 'm':	goto yy117;
	case 'n':	goto yy118;
	default:	goto yy52;
	}
yy67:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy120;
	default:	goto yy52;
	}
yy68:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy121;
	default:	goto yy52;
	}
yy69:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy122;
	default:	goto yy52;
	}
yy70:
	++(*s);
	{ return KALOS_TOKEN_BRA_OPEN; }
yy72:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy123;
	case '|':	goto yy125;
	default:	goto yy73;
	}
yy73:
	{ return KALOS_TOKEN_BITOR; }
yy74:
	++(*s);
	{
            if (state->string_interp_state == STRING_STATE_EXPR) { 
                state->string_interp_state = STRING_STATE_DONE;
                output[0] = 0; // empty format spec
                return KALOS_TOKEN_STRING_FORMAT_SPEC;
            }
            return KALOS_TOKEN_BRA_CLOSE; 
        }
yy76:
	++(*s);
	{ return KALOS_TOKEN_TILDE; }
yy78:
	++(*s);
	{ return KALOS_TOKEN_NOTEQ; }
yy80:
	yych = *++(*s);
	switch (yych) {
	case '"':	goto yy127;
	default:	goto yy81;
	}
yy81:
	(*s) = YYMARKER;
	goto yy14;
yy82:
	++(*s);
	{ return KALOS_TOKEN_EQ_PERCENT; }
yy84:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy129;
	default:	goto yy85;
	}
yy85:
	{ return KALOS_TOKEN_LOGAND; }
yy86:
	++(*s);
	{ return KALOS_TOKEN_EQ_BITAND; }
yy88:
	++(*s);
	{ return KALOS_TOKEN_EQ_STAR; }
yy90:
	++(*s);
	{ return KALOS_TOKEN_EQ_PLUS; }
yy92:
	++(*s);
	{ return KALOS_TOKEN_EQ_MINUS; }
yy94:
	++(*s);
	{ return KALOS_TOKEN_EQ_SLASH; }
yy96:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy131;
	default:	goto yy97;
	}
yy97:
	{ return KALOS_TOKEN_LEFT_SHIFT; }
yy98:
	++(*s);
	{ return KALOS_TOKEN_LTE; }
yy100:
	++(*s);
	{ return KALOS_TOKEN_EQEQ; }
yy102:
	++(*s);
	{ return KALOS_TOKEN_GTE; }
yy104:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy133;
	default:	goto yy105;
	}
yy105:
	{ return KALOS_TOKEN_RIGHT_SHIFT; }
yy106:
	++(*s);
	{ return KALOS_TOKEN_EQ_BITXOR; }
yy108:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy135;
	default:	goto yy52;
	}
yy109:
	yych = *++(*s);
	switch (yych) {
	case 'n':	goto yy136;
	default:	goto yy52;
	}
yy110:
	yych = *++(*s);
	switch (yych) {
	case 'b':	goto yy137;
	default:	goto yy52;
	}
yy111:
	yych = *++(*s);
	switch (yych) {
	case 's':	goto yy138;
	default:	goto yy52;
	}
yy112:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy139;
	default:	goto yy52;
	}
yy113:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy140;
	default:	goto yy52;
	}
yy114:
	yych = *++(*s);
	switch (yych) {
	case 'n':	goto yy142;
	default:	goto yy52;
	}
yy115:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy116;
	}
yy116:
	{ return KALOS_TOKEN_IF; }
yy117:
	yych = *++(*s);
	switch (yych) {
	case 'p':	goto yy143;
	default:	goto yy52;
	}
yy118:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy119;
	}
yy119:
	{ return KALOS_TOKEN_IN; }
yy120:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy144;
	default:	goto yy52;
	}
yy121:
	yych = *++(*s);
	switch (yych) {
	case 'u':	goto yy145;
	default:	goto yy52;
	}
yy122:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy146;
	default:	goto yy52;
	}
yy123:
	++(*s);
	{ return KALOS_TOKEN_EQ_BITOR; }
yy125:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy148;
	default:	goto yy126;
	}
yy126:
	{ return KALOS_TOKEN_LOGOR; }
yy127:
	++(*s);
	c = yycinstringmulti;
	goto yyc_instringmulti;
yy129:
	++(*s);
	{ return KALOS_TOKEN_EQ_LOGAND; }
yy131:
	++(*s);
	{ return KALOS_TOKEN_EQ_LEFT_SHIFT; }
yy133:
	++(*s);
	{ return KALOS_TOKEN_EQ_RIGHT_SHIFT; }
yy135:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy150;
	default:	goto yy52;
	}
yy136:
	yych = *++(*s);
	switch (yych) {
	case 's':	goto yy151;
	case 't':	goto yy152;
	default:	goto yy52;
	}
yy137:
	yych = *++(*s);
	switch (yych) {
	case 'u':	goto yy153;
	default:	goto yy52;
	}
yy138:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy154;
	default:	goto yy52;
	}
yy139:
	yych = *++(*s);
	switch (yych) {
	case 's':	goto yy156;
	default:	goto yy52;
	}
yy140:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy141;
	}
yy141:
	{ return KALOS_TOKEN_FOR; }
yy142:
	yych = *++(*s);
	switch (yych) {
	case 'd':	goto yy157;
	default:	goto yy52;
	}
yy143:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy158;
	default:	goto yy52;
	}
yy144:
	yych = *++(*s);
	switch (yych) {
	case 'p':	goto yy159;
	default:	goto yy52;
	}
yy145:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy161;
	default:	goto yy52;
	}
yy146:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy147;
	}
yy147:
	{ return KALOS_TOKEN_VAR; }
yy148:
	++(*s);
	{ return KALOS_TOKEN_EQ_LOGOR; }
yy150:
	yych = *++(*s);
	switch (yych) {
	case 'k':	goto yy163;
	default:	goto yy52;
	}
yy151:
	yych = *++(*s);
	switch (yych) {
	case 't':	goto yy165;
	default:	goto yy52;
	}
yy152:
	yych = *++(*s);
	switch (yych) {
	case 'i':	goto yy167;
	default:	goto yy52;
	}
yy153:
	yych = *++(*s);
	switch (yych) {
	case 'g':	goto yy168;
	default:	goto yy52;
	}
yy154:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy155;
	}
yy155:
	{ return KALOS_TOKEN_ELSE; }
yy156:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy169;
	default:	goto yy52;
	}
yy157:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy171;
	default:	goto yy52;
	}
yy158:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy172;
	default:	goto yy52;
	}
yy159:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy160;
	}
yy160:
	{ return KALOS_TOKEN_LOOP; }
yy161:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
